--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -3,10 +3,20 @@
 <table>
   <thead>
     <tr>
+      
     </tr>
   </thead>
   <tbody>
-    
+    <% if (stories.length) { %>
+      <% stories.forEach(function(s) { %>
+        <tr>
+          <td><%= s.title %></td>
+          <td><a href="/stories/<%= s._id %>">Read Story</a></td>
+        </tr>
+      <% }) %>
+    <% } else { %>
+      <h5>No Stories Yet</h5>
+    <% }; %>
   </tbody>
 </table>
 <%- include('../partials/footer') %>
