--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fear-It-Forward</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-  <nav>
-    <a href="/">Home</a> | 
-    <a href="/stories/new">Add Story</a> |
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fear-It-Forward</title>
+    <link rel="stylesheet" href="/stylesheets/header.css" />
+  </head>
+  <div class="topnav">
+    <a class="active" href="/">Home</a>
+    <a href="/stories/new">Create</a>
+    <a href="/stories">Stories</a>
+    <!-- <a href="#about">About</a> -->
+  </div>
+  <!-- <nav>
+    <a href="/">Home</a> | <a href="/stories/new">Add Story</a> |
     <a href="/stories">All Stories</a>
-  </nav>
-  
+  </nav> -->
+</html>
