--- a/views/stories/new.ejs
+++ b/views/stories/new.ejs
@@ -9,10 +9,10 @@
     </label><br>
     <label>Theme:
         <select name="theme">
-            <option value="Horror">Horror</option>
-            <option value="Spooky">Spooky</option>
-            <option value="Comedy">Comedy</option>
-            <option value="Drama">Drama</option>
+            <option value="#Horror">Horror</option>
+            <option value="#Spooky">Spooky</option>
+            <option value="#Comedy">Comedy</option>
+            <option value="#Drama">Drama</option>
         </select>
     </label><br>
     <button type="submit">Add Story</button>
