--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,7 @@
 <%- include('./partials/header') %>
-<h2>Test</h2>
+<link rel="stylesheet" href="/stylesheets/index.css" />
+<body>
+  <h1>FINISH MY FRIGHT</h1>
+  <a href="/users.ejs">Continue</a>
+</body>
 <%- include('./partials/footer') %>
