--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fear-It-Forward</title>
     <link rel="stylesheet" href="/stylesheets/header.css" />
+    <link
+      href="https://fonts.cdnfonts.com/css/melted-monster"
+      rel="stylesheet"
+    />
   </head>
-  <div class="topnav">
-    <a class="active" href="/">Home</a>
-    <a href="/stories/new">Create</a>
-    <a href="/stories">Stories</a>
-    <!-- <a href="#about">About</a> -->
-  </div>
-  <!-- <nav>
-    <a href="/">Home</a> | <a href="/stories/new">Add Story</a> |
-    <a href="/stories">All Stories</a>
-  </nav> -->
+  <body>
+    <nav class="topnav">
+      <a class="active" href="/">Home</a>
+      <a href="/stories/new">Create</a>
+      <a href="/stories">Stories</a>
+    </nav>
+  </body>
 </html>
