--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,6 @@
 <link rel="stylesheet" href="/stylesheets/index.css" />
 <body>
   <h1>FINISH MY FRIGHT</h1>
-  <a href="/users.ejs">Continue</a>
+  <a href="/users">Continue</a>
 </body>
 <%- include('./partials/footer') %>
