--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -74,9 +74,9 @@
               <td>
                  <!-- if (user?._id.equals(r.user)) { -->
                     <!-- OVERRIDES POST METHOD TO DELETE-->
-                <!-- <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
+                <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">X</button>
-                </form> -->
+                </form>
               </td>
             </tr>
           <% }); %>
