--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Melted Monster", sans-serif;
-  color: #0d290c;
+  color: #e41123;
   background-image: url(https://images.unsplash.com/photo-1592079927444-590c17e87f28?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-repeat: no-repeat;
   background-attachment: fixed;
