--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -3,9 +3,11 @@
   background-color: #020000;
   overflow: hidden;
   width: 14%; /*width of topnav bar */
-  margin: 0 auto; /* center navigation bar horizontally */
+  margin: 1 auto; /* center navigation bar horizontally */
   float: left; /* align nav bar to left of page */
   border-radius: 10px; /* round the nav bar corners */
+  max-width: 1900px;
+  min-width: 700px;
 }
 
 /* Style the links inside the navigation bar */
