--- a/public/stylesheets/userLogin.css
+++ b/public/stylesheets/userLogin.css
@@ -53,6 +53,10 @@ h2 {
 
 /* Font styles for navigation links */
 .topnav a {
-  font-family: 'Melted Monster', sans-serif; /* Specify the font family */
+  font-family: "Melted Monster", sans-serif; /* Specify the font family */
   color: #ab0606;
 }
+
+/* a {
+  text-decoration: none;
+} */
