--- a/public/stylesheets/userLogin.css
+++ b/public/stylesheets/userLogin.css
@@ -1,5 +1,5 @@
 body {
-  font-family: chi;
+  font-family: "Melted Monster", sans-serif;
   background-image: url(https://images.unsplash.com/photo-1511406361295-0a1ff814c0ce?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -14,7 +14,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   justify-content: center;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 120px;
   padding-bottom: 100px;
 }
 h2 {
