--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -7,7 +7,7 @@
 .story-dialog {
     width: 70%;
     margin: 0 auto;
-    background-color: #fff; /* Adjust as needed */
+    background-color: #b74b4b; /* Adjust as needed */
     border: 2px solid #000; /* Adjust as needed */
     padding: 20px;
     border-radius: 10px;
