--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<link rel="stylesheet" href="/stylesheets/show.css"> <!-- Include CSS file for story show styling -->
 <h2>Story Info</h2>
 <table>
     <thead>
@@ -17,7 +18,11 @@
             <td><%= story.createdAt.toLocaleDateString()%></td>
         </tr>
         <tr>
-            <form action="/stories/<%= story._id %>/edit" method="GET"> <button type="submit">Edit Story</button></form>
+            <td colspan="4">
+                <form action="/stories/<%= story._id %>/edit" method="GET">
+                    <button type="submit">Edit Story</button>
+                </form>
+            </td>
         </tr>
         
     </tbody>
