--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,9 +1,10 @@
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: transparent;
+  background-color: transparent;
   overflow: hidden;
-  width: 14%; /*width of topnav bar */
-  margin: 0 auto; /* center navigation bar horizontally */
+  width: 0%; /*width of topnav bar */
+  margin: 1 auto; /* center navigation bar horizontally */
   float: left; /* align nav bar to left of page */
   border-radius: 10px; /* round the nav bar corners */
   max-width: 1900px;
