user profile routes started

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
     <a class="<%= currentPage === 'home' ? 'active' : '' %>" href="/">Home</a>
     <a class="<%= currentPage === 'create' ? 'active' : '' %>" href="/stories/new">Create</a>
     <a class="<%= currentPage === 'stories' ? 'active' : '' %>" href="/stories">Stories</a>
+    <a class="<%= currentPage === 'profiles' ? 'active' : '' %>" href="/users/redirect">Profile</a>
   </nav>
 </body>
 </html>
