added in if's for show.ejs to hide delete function for diff users

--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -43,13 +43,16 @@
             <tr>
               <td><%= counter %></td>
               <td><%= c.body %></td>
+              <!-- WHY DOES THIS STILL RENDER IF FALSE -->
+              <% if (user._id.equals(c.user)) { %>
               <td>
-                 <!-- if (user?._id.equals(r.user)) { -->
-                    <!-- OVERRIDES POST METHOD TO DELETE-->
                 <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">X</button>
                 </form>
               </td>
+              <% } else { %>
+                <td></td>
+              <% } %>
               <% counter++ %>
             </tr>
           <% }); %>
