--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -47,16 +47,17 @@
             <tr>
               <td><%= counter %></td>
               <td><%= c.body %></td>
-              <!-- ONLY RENDERS IF USER IS OWNER OF STORY OR ORIGINAL POSTER -->
+              <!-- WHY DOES THIS STILL RENDER IF FALSE -->
+              <% if (user._id.equals(c.user)) { %>
               <td>
-              <% if (user) { %>
-              <% if (user._id.equals(c.user) || user._id.equals(story.user)) { %>
                 <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">X</button>
                 </form>
                 <% } else { %>
               </td>
-              <% }} %>
+              <% } else { %>
+                <td></td>
+              <% } %>
               <% counter++ %>
             </tr>
           <% }); %>
