--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -22,6 +22,9 @@
               <!-- ONLY RENDERS IF USER IS OWNER OF STORY OR ORIGINAL POSTER -->
               <% if (user) { %>
                 <% if (user._id.equals(story.user)) { %>
+              <!-- ONLY RENDERS IF USER IS OWNER OF STORY OR ORIGINAL POSTER -->
+              <% if (user) { %>
+                <% if (user._id.equals(story.user)) { %>
                 <form action="/stories/<%= story._id %>/edit" method="GET">
                     <button type="submit">Edit Story</button>
                 </form>
@@ -47,28 +50,17 @@
             <tr>
               <td><%= counter %></td>
               <td><%= c.body %></td>
-<<<<<<< HEAD
-              <!-- ONLY RENDERS IF USER IS OWNER OF STORY OR ORIGINAL POSTER -->
-              <td>
-              <% if (user) { %>
-              <% if (user._id.equals(c.user) || user._id.equals(story.user)) { %>
-=======
               <!-- WHY DOES THIS STILL RENDER IF FALSE -->
               <% if (user._id.equals(c.user)) { %>
               <td>
->>>>>>> 07ac329 (added in if's for show.ejs to hide delete function for diff users)
                 <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">X</button>
                 </form>
                 <% } else { %>
               </td>
-<<<<<<< HEAD
-              <% }} %>
-=======
               <% } else { %>
                 <td></td>
               <% } %>
->>>>>>> 07ac329 (added in if's for show.ejs to hide delete function for diff users)
               <% counter++ %>
             </tr>
           <% }); %>
