--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -47,17 +47,16 @@
             <tr>
               <td><%= counter %></td>
               <td><%= c.body %></td>
-              <!-- WHY DOES THIS STILL RENDER IF FALSE -->
-              <% if (user._id.equals(c.user)) { %>
+              <!-- ONLY RENDERS IF USER IS OWNER OF STORY OR ORIGINAL POSTER -->
               <td>
+              <% if (user) { %>
+              <% if (user._id.equals(c.user) || user._id.equals(story.user)) { %>
                 <form action="/stories/<%= story._id %>/chapters/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">X</button>
                 </form>
                 <% } else { %>
               </td>
-              <% } else { %>
-                <td></td>
-              <% } %>
+              <% }} %>
               <% counter++ %>
             </tr>
           <% }); %>
