added basic profile information from schema

--- a/views/userProfiles/profile.ejs
+++ b/views/userProfiles/profile.ejs
@@ -10,6 +10,7 @@
       <div class="card-header">
         <img
           src="<%= profUser.avatar %>"
+          src="<%= profUser.avatar %>"
           alt="Profile Image"
           class="profile-img"
         />
