added profile editing functionality

--- a/views/userProfiles/profile.ejs
+++ b/views/userProfiles/profile.ejs
@@ -40,37 +40,51 @@
         <p class="count">
           <span>120k</span> Followers | <span>10k</span> Following
         </p>
+        <% if (user._id.equals(profUser.id)) { %>
         <!-- Profile edit button -->
         <button id="editProfileBtn">Edit Profile</button>
         <!-- Edit form -->
         <div id="editForm" style="display: none">
           <h2>Edit Profile</h2>
-          <form id="profileEditForm">
+          <form id="profileEditForm" action="/users/<%= user._id %>?_method=PUT" method="POST" autocomplete="off">
             <label for="editName">Name:</label>
             <input
               type="text"
               id="editName"
-              name="editName"
-              value="Your Name"
+              name="displayName"
+              <% if(profUser.profile.displayName) {%>
+                value="<%= profUser.profile.displayName %>"
+              <% } else { %>
+                value="Your Name"
+                <% } %>
             />
 
             <label for="editEmail">Email:</label>
             <input
               type="email"
               id="editEmail"
-              name="editEmail"
-              value="yourname@amail.com"
+              name="displayEmail"
+              <% if(profUser.profile.displayEmail) {%>
+                value="<%= profUser.profile.displayEmail %>"
+              <% } else { %>
+                value="Yourname@email.com"
+                <% } %>
             />
 
             <label for="editJob">About:</label>
             <input
               type="text"
               id="editJob"
-              name="editJob"
-              value="Developer | Designer"
+              name="aboutMe"
+              <% if(profUser.profile.aboutMe) {%>
+                value="<%= profUser.profile.aboutMe %>"
+            <% } else { %>
+                value="Developer | Designer"
+            <% } %>
             />
-
+            
             <button type="submit">Save Changes</button>
+            <% } %>
           </form>
         </div>
       </div>
@@ -97,16 +111,16 @@
       });
 
       // Prevent form submission (for demonstration)
-      document
-        .getElementById("profileEditForm")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-          // Here you can handle form submission, such as sending data to the server
-          // For now, we'll just hide the edit form after submission
-          editForm.style.display = "none";
-          // Show the edit profile button again
-          editProfileBtn.style.display = "block";
-        });
+    //   document
+    //     .getElementById("profileEditForm")
+    //     .addEventListener("submit", function (event) {
+    //       event.preventDefault();
+    //       // Here you can handle form submission, such as sending data to the server
+    //       // For now, we'll just hide the edit form after submission
+    //       editForm.style.display = "none";
+    //       // Show the edit profile button again
+    //       editProfileBtn.style.display = "block";
+    //     });
     </script>
   </body>
 </html>
