--- a/views/userProfiles/profile.ejs
+++ b/views/userProfiles/profile.ejs
@@ -28,6 +28,19 @@
             <p class="About Me">I like Turtles....</p>
         <% } %>
       </div>
+      <div>
+        <div class="dropdown">
+          <span>Check Out My Stories</span>
+          <div class="dropdown-content">
+            <p>story1</p>
+            <p>story2</p>
+            <p>story3</p>
+            <p>story4</p>
+            <p>story5</p>
+            <p>story6</p>
+          </div>
+        </div>
+      </div>
 
       <div class="social-links">
         <a href="#" class="fab fa-instagram social-icon"></a>
