--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -4,7 +4,7 @@
 <div class="story-info">
   <h2>Story Info</h2>
   <div class="author-info">
-    <p class="author-name">Author: <%= story.user %></p>
+    <p class="author-name">Author: <%= author.profile.displayName %></p>
     <p class="theme">Theme: <%= story.theme %></p>
   </div>
 </div>
