--- a/public/stylesheets/storyShow.css
+++ b/public/stylesheets/storyShow.css
@@ -52,7 +52,7 @@
 
 body {
   font-family: "Montserrat";
-  background-image: url("https://www.clker.com/cliparts/w/Q/t/K/F/W/scroll-vertical-md.png");
+  background-image: url(https://blog-assets.thedyrt.com/uploads/2018/10/shutterstock_794084761-compressor.jpg);
   background-size: cover; /* Cover the entire background */
   background-position: center; /* Center the background image */
   color: #020000;
