--- a/public/stylesheets/newStory.css
+++ b/public/stylesheets/newStory.css
@@ -1,66 +1,76 @@
 /* Body styles */
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-image: url('/images/bloodystump.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh; /* Ensure background covers the entire viewport */
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-image: url("https://dehayf5mhw1h7.cloudfront.net/wp-content/uploads/sites/1315/2021/10/19102858/Blog-3.png");
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Ensure background covers the entire viewport */
 }
 
 /* Container styles */
 .container {
-    width: 50%; /* Adjust as needed */
-    margin: auto; /* Center the container horizontally */
-    padding: 20px;
-    background-color: rgba(41, 17, 17, 0.8); /* Semi-transparent white background */
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Drop shadow */
-    position: absolute; /* Position the container */
-    top: 50%; /* Place the top edge of the container at the vertical center of the viewport */
-    left: 50%; /* Place the left edge of the container at the horizontal center of the viewport */
-    transform: translate(-50%, -50%); /* Move the container back by half of its own width and height */
-    color: #ea2c2c; /* Text color */
-     font-family: 'Melted Monster', sans-serif; /* Specify the font family */
-     text-shadow: #000000;
+  width: 50%; /* Adjust as needed */
+  margin: auto; /* Center the container horizontally */
+  padding: 20px;
+  background-color: rgba(
+    69,
+    85,
+    95,
+    0.8
+  ); /* Semi-transparent white background */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Drop shadow */
+  position: absolute; /* Position the container */
+  top: 50%; /* Place the top edge of the container at the vertical center of the viewport */
+  left: 50%; /* Place the left edge of the container at the horizontal center of the viewport */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* Move the container back by half of its own width and height */
+  color: #cee8e9; /* Text color */
+  font-family: "Melted Monster", sans-serif; /* Specify the font family */
+  text-shadow: #000000;
 }
 
+h2 {
+  text-align: center;
+}
 /* Form styles */
 form {
-    text-align: center; /* Center form elements */
+  text-align: center; /* Center form elements */
 }
 
 label {
-    display: block;
-    margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 input[type="text"],
 select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #253603;
-    border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #253603;
+  border-radius: 5px;
 }
 
 button[type="submit"] {
-    background-color: #050505;
-    color: rgb(234, 100, 100);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: #337b7e;
+  color: rgb(173, 165, 165);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button[type="submit"]:hover {
-    background-color: #69131b;
-    color: #000000; /* Text color on hover */
+  background-color: #69131b;
+  color: #000000; /* Text color on hover */
 }
 
 /* Font styles for navigation links */
 .topnav a {
-    font-family: 'Melted Monster', sans-serif; /* Specify the font family */
+  font-family: "Melted Monster", sans-serif; /* Specify the font family */
 }
-
