--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Montserrat";
-  background-color: #b8b6b6;
+  background: url(https://www.dutchwindowcleaningartist.com/assets/img/blog/spooky-halloween-.webp);
   color: #fdfdfd;
   padding: 50px;
   padding-top: 50px;
@@ -39,13 +39,13 @@ body {
   margin-top: 30px;
   font-size: 22px;
   font-weight: bold;
-  color: #c74385;
+  color: #238fce;
 }
 
 .card .card-body .name:hover {
   margin-top: 30px;
   font-size: 24px;
-  color: #d885af;
+  color: #7faad3;
 }
 
 .card .card-body .mail {
@@ -75,7 +75,7 @@ body {
   justify-content: center;
   height: 40px;
   width: 40px;
-  background-color: #c74385;
+  background-color: #7faad3;
   color: #ffffff;
   font-size: 20px;
   border-radius: 100%;
@@ -88,14 +88,14 @@ body {
 }
 
 .card .social-links .social-icon:hover {
-  background-color: #d885af;
+  background-color: #7faad3;
   height: 50px;
   width: 50px;
   text-decoration: none;
 }
 
 .card .card-footer {
-  background-color: #c74385;
+  background-color: #7faad3;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   padding: 20px 0 20px 0;
@@ -154,7 +154,7 @@ body {
 button#editProfileBtn {
   border-radius: 20px; /* Adjust the border-radius to make the button more round */
   padding: 10px 20px; /* Add padding to improve button appearance */
-  background-color: #c74385; /* Background color */
+  background-color: #238fce; /* Background color */
   color: #ffffff; /* Text color */
   border: none; /* Remove border */
   cursor: pointer; /* Change cursor to pointer on hover */
@@ -225,7 +225,7 @@ button#editProfileBtn:hover {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #a81414;
+  background-color: #238fce;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
