--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -121,4 +121,12 @@
   <input type="submit" value="Submit" />
 </form>
 
+  <% if (user) { %> <% if (user._id.equals(story.user)) { %>
+  <form action="/stories/<%= story._id %>?_method=DELETE" method="POST">
+    <button type="submit">Delete Story</button></form>
+    <form action="/stories/<%= story._id %>/edit" method="GET">
+    <button type="submit">Edit Story</button></form>
+    <% }} %>
+    
+
 <%- include('../partials/footer') %>
